--- a/config
+++ b/config
@@ -1,5 +1,5 @@
 BLOG_TITLE:=Hui-Jun Chen's Webpage
-BLOG_REMOTE:=/var/www/huijunchen9260.github.io/
+BLOG_REMOTE:=/var/www/huijunchen9260.github.io
 BLOG_DATE_FORMAT_INDEX:=%F
 BLOG_DATE_FORMAT:=%F
 BLOG_SRC:=src
